--- a/docs/shared.bib
+++ b/docs/shared.bib
@@ -1,22 +1,13 @@
-% author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
-% title        = {Low-Power Design of a Functional Unit for Arithmetic in Finite Fields {GF(p)} and {GF(2m)}},
-% booktitle    = {WISA},
-% pages        = {227--243},
-% year         = {2003}
-%
-% author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
-% title        = {Optimized {RISC} Architecture for Multiple-Precision Modular Arithmetic},
-% booktitle    = {SPC},
-% pages        = {253--270},
-% year         = {2003}
+%@article{SCARV:Gro:03,
+%  author       = {J. Gro{\ss}sch\"{a}dl},
+%  title        = {Architectural Support for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards},
+%  journal      = {IJHPCA},
+%  volume       = {17},
+%  number       = {2},
+%  pages        = {135--146},
+%  year         = {2003}
+%}
 
-% author       = {J. Gro{\ss}sch\"{a}dl},
-% title        = {Architectural Support for Long Integer Modulo Arithmetic on {RISC}-Based Smart Cards},
-% booktitle    = {IJHPCA},
-% volume       = {17},
-% number       = {2},
-% pages        = {135--146},
-% year         = {2003}
 %
 % author       = {T. Vejda and D. Page and J. Gro{\ss}sch\"{a}dl:}
 % title        = {Instruction Set Extensions for Pairing-Based Cryptography}
@@ -327,6 +318,16 @@
 % -----------------------------------------------------------------------------
 % misc.
 
+@inproceedings{SCARV:GroKam:03,
+  author       = {J. Gro{\ss}sch\"{a}dl and G.-A. Kamendje},
+  title        = {Low-Power Design of a Functional Unit for Arithmetic in Finite Fields {GF(p)} and {GF(2m)}},
+  booktitle    = {Workshop on Information Security Applications (WISA)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 2908},
+  pages        = {227--243},
+  year         = {2003}
+}
+
 @inproceedings{SCARV:TilGro:05,
   author       = {S. Tillich and J. Gro{\ss}sch\"{a}dl},
   title        = {Accelerating {AES} Using Instruction Set Extensions for Elliptic Curve Cryptography},
@@ -491,6 +492,16 @@
   year         = {2002}
 }
 
+@inproceedings{SCARV:FouMoo:05,
+  author       = {J.J.A. Fournier and S. Moore},
+  title        = {A Vector Approach to Cryptography Implementation},
+  booktitle    = {Digital Rights Management: Technologies, Issues, Challenges and Systems (DRMTICS)},
+  publisher    = {Springer-Verlag},
+  series       = {LNCS 3919},
+  pages        = {277--297},
+  year         = {2005}
+}
+
 % =============================================================================
 % JCEN
 
@@ -643,11 +654,27 @@
 
 % =============================================================================
 
-@book{book:aes,
+@book{SCARV:DaeRij:02,
   author       = {J. Daemen and V. Rijmen},
   title        = {The Design of Rijndael},
   publisher    = {Springer}, 
   year         = {2002}
+}
+
+@book{SCARV:KnuRob:11,
+  author       = {L.R. Knudsen and M.J.B. Robshaw},
+  title        = {The Block Cipher Companion},
+  publisher    = {Springer}, 
+  year         = {2011}
+}
+
+% =============================================================================
+
+@phdthesis{SCARV:Fournier:07,
+  author       = {J.J.A. Fournier},
+  title        = {Vector microprocessors for cryptography}, 
+  school       = {University of Cambridge},
+  year         = {2017}
 }
 
 % =============================================================================
