--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -39,6 +39,7 @@
 
 \import{./specification/}{spec-state.tex}
 \import{./specification/}{spec-instr.tex}
+\import{./specification/}{spec-discussion.tex}
 
 % =============================================================================
 
