--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -8,7 +8,7 @@
 \cite{SCARV:GGHJPTW:11}
 
 \subsection*{Cryptography- or security-specific processor design}
-\cite{SCARV:KocSavGro:08,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
+\cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
 
 \subsection*{ISEs: general}
 \cite{SCARV:BarGioMar:09}
@@ -19,8 +19,8 @@
 \cite{SCARV:Gro:02,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
 \subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields}
 \cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GKP:04}
-\subsection*{ISEs for arithmetic: misc}
-\cite{SCARV:GroSav:04}
+\subsection*{ISEs for arithmetic: misc, or both}
+\cite{SCARV:GroKam:03,SCARV:GroSav:04}
 
 \subsection*{ISEs within co-design}
 \cite{SCARV:KLWGSTW:06,SCARV:GIPTV:06}
