--- a/docs/shared.sty
+++ b/docs/shared.sty
@@ -64,6 +64,8 @@
 \titleformat{\paragraph}[block]{\normalfont\bfseries}{\theparagraph.}{1em}{}
 \titleformat{\subparagraph}[runin]{\normalfont\bfseries}{}{0em}{}
 
+\titlespacing*{\subparagraph}{0pt}{1ex}{1em}
+
 \setcounter{tocdepth}{3}
 \setcounter{secnumdepth}{4}
 
