--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -3,27 +3,30 @@
 \subsection*{Processor/co-processor/accelerator design}
 \cite{SCARV:Gutmann:00}
 \cite{SCARV:WuWeaAus:01}
-\cite{SCARV:TheSisPne:09}
 \cite{SCARV:MTRGS:99}
 \cite{SCARV:GGHJPTW:11}
+\cite{SCARV:CosLebDev:16}
 
 \subsection*{Cryptography- or security-specific processor design}
-\cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
+\cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TheSisPne:09,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
 
 \subsection*{ISEs: general}
 \cite{SCARV:BarGioMar:09}
 \cite{SCARV:RegIen:16}
 \cite{SCARV:FazLopOli:18}
 
-\subsection*{ISEs for arithmetic: $\B{Z}_{N}$ and general multi-precision}
-\cite{SCARV:Gro:02,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
-\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields}
-\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GKP:04}
-\subsection*{ISEs for arithmetic: misc, or both}
-\cite{SCARV:GroKam:03,SCARV:GroSav:04}
-
-\subsection*{ISEs within co-design}
+\subsection*{ISEs: co-design}
 \cite{SCARV:KLWGSTW:06,SCARV:GIPTV:06}
+
+\subsection*{ISEs for arithmetic: $\B{Z}_{N}$ and general multi-precision}
+\cite{SCARV:Gro:02,SCARV:Gro:03,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
+\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields}
+\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GroKumPar:04}
+\subsection*{ISEs for arithmetic: misc}
+\cite{SCARV:GroKam:03,SCARV:GroSav:04,SCARV:VejPagGro:07}
+
+\subsection*{ISEs for symmetric}
+\cite{SCARV:MelElb:08,SCARV:MelElb:10}
 
 \subsection*{ISEs for AES: security-focused}
 \cite{SCARV:TilGro:07:a}
@@ -34,7 +37,6 @@
 
 \subsection*{ISEs for table look-up and memory access}
 \cite{SCARV:FisLee:01,SCARV:FisLee:05:a,SCARV:FisLee:05:b,SCARV:HilYinLee:08}
-
 \subsection*{ISEs for bit-permutation}
 \cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:LeeShiYan:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04,MASCAB:LeeYanShi:05,SCARV:HilYinLee:08,SCARV:HilLee:08,SCARV:ShiYanLee:08}
 \subsection*{ISEs for bit-slicing}
