--- a/docs/specification/appx-related.tex
+++ b/docs/specification/appx-related.tex
@@ -10,35 +10,36 @@
 \subsection*{Cryptography- or security-specific processor design}
 \cite{SCARV:FouMoo:05,SCARV:Fournier:07,SCARV:KocSavGro:08,SCARV:TheSisPne:09,SCARV:TilKirSze:10,SCARV:NREAMM:12,SCARV:YumSav:15,SCARV:RagAmbPar:15,SCARV:AweAus:17,SCARV:YHEF:18}
 
-\subsection*{ISEs: general}
+\subsection*{ISEs: general/codesign/security/scheduling and code generation}
+\cite{SCARV:Fiskiran:05}
 \cite{SCARV:BarGioMar:09}
 \cite{SCARV:RegIen:16}
 \cite{SCARV:FazLopOli:18}
-
-\subsection*{ISEs: co-design}
 \cite{SCARV:KLWGSTW:06,SCARV:GIPTV:06}
+\cite{SCARV:RCSBKBLI:09}
+\cite{SCARV:ManGre:10,SCARV:ManMagGre:10,SCARV:Manley:11}
 
 \subsection*{ISEs for arithmetic: $\B{Z}_{N}$ and general multi-precision}
 \cite{SCARV:Gro:02,SCARV:Gro:03,SCARV:GroKam:03:a,SCARV:GAST:05,SCARV:GroTilSze:07}
-\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields}
-\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GroKumPar:04}
+\subsection*{ISEs for arithmetic: $\B{F}_{2^m}$ and other fields (e.g., for ECC)}
+\cite{SCARV:GroKam:03:b,SCARV:FisLee:04,SCARV:GroKumPaa:04,SCARV:KumPaa:04,SCARV:BBGM:08}
 \subsection*{ISEs for arithmetic: misc}
 \cite{SCARV:GroKam:03,SCARV:GroSav:04,SCARV:VejPagGro:07}
 
 \subsection*{ISEs for symmetric}
-\cite{SCARV:MelElb:08,SCARV:MelElb:10}
+\cite{SCARV:BurMcDAus:00,SCARV:MelElb:08,SCARV:MelElb:10}
 
 \subsection*{ISEs for AES: security-focused}
 \cite{SCARV:TilGro:07:a}
 \subsection*{ISEs for AES: efficiency-focused}
 \cite{SCARV:TilGroSze:05,SCARV:TilGro:06,SCARV:APRJ:11}
-\subsection*{ISEs for AES: mixed, e.g., vs. ECC}
-\cite{SCARV:TilGro:05,SCARV:TilGro:07:b}
+\subsection*{ISEs for AES: mixed use (e.g., repurposed)}
+\cite{SCARV:TilGro:05,SCARV:TilGro:07:b,SCARV:BBGR:09,SCARV:BosOzeSta:11}
 
 \subsection*{ISEs for table look-up and memory access}
 \cite{SCARV:FisLee:01,SCARV:FisLee:05:a,SCARV:FisLee:05:b,SCARV:HilYinLee:08}
-\subsection*{ISEs for bit-permutation}
-\cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:LeeShiYan:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04,MASCAB:LeeYanShi:05,SCARV:HilYinLee:08,SCARV:HilLee:08,SCARV:ShiYanLee:08}
+\subsection*{ISEs for bit-manipulation (inc. permutation)}
+\cite{SCARV:ShiLee:00,SCARV:YanLee:00,SCARV:McGLee:01,SCARV:LeeShiYan:01,SCARV:ShiLee:02,SCARV:ShiYanLee:03,SCARV:LSYRR:04,SCARV:Shi:04,MASCAB:LeeYanShi:05,SCARV:HilYinLee:08,SCARV:HilLee:08,SCARV:ShiYanLee:08,SCARV:Hilewitz:08}
 \subsection*{ISEs for bit-slicing}
 As introduced by Biham~\cite{SCARV:Biham:97}, bit-slicing is based on
 a) a non-standard {\em representation} of data,
