--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -27,7 +27,6 @@
 \import{./specification/}{bg-guarantee.tex}
 \import{./specification/}{bg-compatibility.tex}
 \import{./specification/}{bg-feature.tex}
-\import{./specification/}{bg-discussion.tex}
 
 \section{Notation}
 \label{sec:notation}
@@ -39,7 +38,6 @@
 
 \import{./specification/}{spec-state.tex}
 \import{./specification/}{spec-instr.tex}
-\import{./specification/}{spec-discussion.tex}
 
 % =============================================================================
 
@@ -67,6 +65,12 @@
 \label{appx:related}
 
 \import{./specification/}{appx-related.tex}
+
+\newpage
+\section{Design notes}
+\label{appx:design}
+
+\import{./specification/}{appx-design.tex}
 
 \newpage
 \section{Changelog}
