--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -35,7 +35,12 @@ execution of said implementations.
 
 Note this document {\em is} a specification for \XCID, but categorically
 {\em is not} an implementation guide: we provide a separate document for 
-that purpose.
+that purpose.  In order to avoid the specification becoming too verbose,
+we defer coverage of related work and an detailed design notes to
+\REFAPPX{appx:related}
+and
+\REFAPPX{appx:design}
+respectively.
 Also note that it should be viewed as a prototype or draft, so statements 
 such as 
 ``\XCID is   X'' 
@@ -44,5 +49,6 @@ or
 should be carefully qualified with {\em currently} vs. {\em definitively}.  
 In particular, we expect some degree of iteration and so change to emerge 
 from work in progress wrt. design, implementation, and evaluation.
+
 
 % =============================================================================
