fiddled with content; added versioning and changelog explaination

--- a/docs/specification.tex
+++ b/docs/specification.tex
@@ -10,7 +10,9 @@
 
 \begin{document}
 
+\newpage
 \maketitle \tableofcontents
+\newpage
 
 % =============================================================================
 
