--- a/docs/specification/bg-concept.tex
+++ b/docs/specification/bg-concept.tex
@@ -100,13 +100,9 @@
             approach used clearly {\em will} imply trade-offs 
             (e.g., vs. efficiency typically delivered by hardware-only techniques), 
             it {\em should} more easily support
-
-            \begin{itemize}
-            \item agility wrt. primitive, algorithm, and parameter choices,
-                  and
-            \item instrumentation of context-dependent countermeasures.
-            \end{itemize}
-
+            a) agility wrt. primitive, algorithm, and parameter choices,
+               and
+            b) instrumentation of context-dependent countermeasures.
       \item {\bf    Composability}.
             To mitigate a given attack, a layered approach (cf. defence in 
             depth) is normally preferred: this favours the use of multiple
