--- a/docs/specification/intro.tex
+++ b/docs/specification/intro.tex
@@ -40,15 +40,19 @@ we defer coverage of related work and an detailed design notes to
 \REFAPPX{appx:related}
 and
 \REFAPPX{appx:design}
-respectively.
-Also note that it should be viewed as a prototype or draft, so statements 
-such as 
+respectively.  It follows a semantic versioning\footnote{
+\url{http://semver.org}
+} (or major/minor/patch) convention, with a summarised changelog\footnote{
+\url{http://keepachangelog.com}
+} maintained in
+\REFAPPX{appx:changelog}.
+In line with the current version, the specification should be viewed as an
+initial prototype or draft; statements such as 
 ``\XCID is   X'' 
 or
 ``\XCID does Y''
 should be carefully qualified with {\em currently} vs. {\em definitively}.  
 In particular, we expect some degree of iteration and so change to emerge 
 from work in progress wrt. design, implementation, and evaluation.
-
 
 % =============================================================================
